generated-tests/tests/snapshots/rust/test_generated_struct_pattern.snap
---
source: generated-tests/tests/rust.rs
expression: snapshot_content
---
Source Code:
if let Type2 { field4: x14 } = value8 { }

AST:
(source_file
  (expression_statement
    (if_expression
      (let_condition
        (struct_pattern
          (type_identifier)
          (field_pattern
            (field_identifier)
            (identifier x14)
          )
        )
        (identifier value8)
      )
      (block)
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [],
    dependencies: [],
    usage: [
        Usage {
            name: "Type2",
            kind: TypeIdentifier,
            position: Position {
                start_line: 1,
                start_column: 8,
                end_line: 1,
                end_column: 13,
            },
        },
        Usage {
            name: "x14",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 24,
                end_line: 1,
                end_column: 27,
            },
        },
        Usage {
            name: "value8",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 32,
                end_line: 1,
                end_column: 38,
            },
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
