generated-tests/tests/snapshots/rust/test_generated_token_binding_pattern.snap
---
source: generated-tests/tests/rust.rs
expression: snapshot_content
---
Source Code:
match val3 { b4 @ _ => {} }

AST:
(source_file
  (expression_statement
    (match_expression
      (identifier val3)
      (match_block
        (match_arm
          (match_pattern
            (captured_pattern
              (identifier b4)
            )
          )
          (block)
        )
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "b4",
            position: Position {
                start_line: 1,
                start_column: 14,
                end_line: 1,
                end_column: 16,
            },
            definition_type: VariableDefinition,
        },
    ],
    dependencies: [],
    usage: [
        Usage {
            name: "val3",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 7,
                end_line: 1,
                end_column: 11,
            },
        },
        Usage {
            name: "b4",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 14,
                end_line: 1,
                end_column: 16,
            },
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
