generated-tests/tests/snapshots/rust/test_generated_token_tree_pattern.snap
---
source: generated-tests/tests/rust.rs
expression: snapshot_content
---
Source Code:
macro_rules! test_macro1 { ({ $($content:tt)* }) => { $($content)* }; }

AST:
(source_file
  (macro_definition
    (identifier test_macro1)
    (macro_rule
      (token_tree_pattern
        (token_tree_pattern
          (token_repetition_pattern
            (token_binding_pattern
              (metavariable)
              (fragment_specifier)
            )
          )
        )
      )
      (token_tree
        (token_repetition
          (metavariable)
        )
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "test_macro1",
            position: Position {
                start_line: 1,
                start_column: 14,
                end_line: 1,
                end_column: 25,
            },
            definition_type: MacroDefinition,
        },
        Definition {
            name: "$content",
            position: Position {
                start_line: 1,
                start_column: 33,
                end_line: 1,
                end_column: 41,
            },
            definition_type: MacroVariableDefinition,
        },
    ],
    dependencies: [],
    usage: [
        Usage {
            name: "test_macro1",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 14,
                end_line: 1,
                end_column: 25,
            },
        },
        Usage {
            name: "$content",
            kind: Metavariable,
            position: Position {
                start_line: 1,
                start_column: 33,
                end_line: 1,
                end_column: 41,
            },
        },
        Usage {
            name: "$content",
            kind: Metavariable,
            position: Position {
                start_line: 1,
                start_column: 57,
                end_line: 1,
                end_column: 65,
            },
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
