generated-tests/tests/snapshots/rust/test_generated_trait_item.snap
---
source: generated-tests/tests/rust.rs
expression: snapshot_content
---
Source Code:
trait TestTrait1 { fn method1(&self) -> i32; }

AST:
(source_file
  (trait_item
    (type_identifier)
    (declaration_list
      (function_signature_item
        (identifier method1)
        (parameters
          (self_parameter
            (self)
          )
        )
        (primitive_type)
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "TestTrait1",
            position: Position {
                start_line: 1,
                start_column: 7,
                end_line: 1,
                end_column: 17,
            },
            definition_type: TypeDefinition,
        },
        Definition {
            name: "method1",
            position: Position {
                start_line: 1,
                start_column: 23,
                end_line: 1,
                end_column: 30,
            },
            definition_type: FunctionDefinition,
        },
    ],
    dependencies: [],
    usage: [
        Usage {
            name: "method1",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 23,
                end_line: 1,
                end_column: 30,
            },
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
