generated-tests/tests/snapshots/rust/test_generated_try_expression.snap
---
source: generated-tests/tests/rust.rs
expression: snapshot_content
---
Source Code:
result1?

AST:
(source_file
  (ERROR
    (try_expression
      (identifier "result1")
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [],
    dependencies: [],
    usage: [
        Usage {
            name: "result1",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 1,
                end_line: 1,
                end_column: 8,
            },
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
