generated-tests/tests/snapshots/rust/test_generated_tuple_expression.snap
---
source: generated-tests/tests/rust.rs
expression: snapshot_content
---
Source Code:
(item11, item21)

AST:
(source_file
  (expression_statement
    (tuple_expression
      (identifier item11)
      (identifier item21)
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [],
    dependencies: [],
    usage: [
        Usage {
            name: "item11",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 2,
                end_line: 1,
                end_column: 8,
            },
        },
        Usage {
            name: "item21",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 10,
                end_line: 1,
                end_column: 16,
            },
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
