generated-tests/tests/snapshots/rust/test_generated_tuple_struct_pattern.snap
---
source: generated-tests/tests/rust.rs
expression: snapshot_content
---
Source Code:
if let Point(x16, y5) = point_val { }

AST:
(source_file
  (expression_statement
    (if_expression
      condition: (let_condition
        pattern: (tuple_struct_pattern
          type: (identifier "Point")
          (identifier "x16")
          (identifier "y5")
        )
        value: (identifier "point_val")
      )
      consequence: (block)
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "x16",
            position: Position {
                start_line: 1,
                start_column: 14,
                end_line: 1,
                end_column: 17,
            },
            definition_type: VariableDefinition,
        },
        Definition {
            name: "y5",
            position: Position {
                start_line: 1,
                start_column: 19,
                end_line: 1,
                end_column: 21,
            },
            definition_type: VariableDefinition,
        },
    ],
    dependencies: [],
    usage: [
        Usage {
            name: "Point",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 8,
                end_line: 1,
                end_column: 13,
            },
        },
        Usage {
            name: "x16",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 14,
                end_line: 1,
                end_column: 17,
            },
        },
        Usage {
            name: "y5",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 19,
                end_line: 1,
                end_column: 21,
            },
        },
        Usage {
            name: "point_val",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 25,
                end_line: 1,
                end_column: 34,
            },
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
