generated-tests/tests/snapshots/rust/test_generated_tuple_type.snap
---
source: generated-tests/tests/rust.rs
expression: snapshot_content
---
Source Code:
let tuple: (i32, String) = (42, "test".to_string());

AST:
(source_file
  (let_declaration
    (identifier tuple)
    (tuple_type
      (primitive_type)
      (type_identifier)
    )
    (tuple_expression
      (integer_literal)
      (call_expression
        (field_expression
          (string_literal
            (string_content)
          )
          (field_identifier)
        )
        (arguments)
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "tuple",
            line_number: 1,
            definition_type: VariableDefinition,
            scope: None,
        },
    ],
    dependencies: [],
    usage: [
        SerializableUsage {
            name: "\"test\".to_string()",
            kind: CallExpression,
            scope: None,
            start_line: 1,
            start_column: 33,
            end_line: 1,
            end_column: 51,
        },
        SerializableUsage {
            name: "\"test\".to_string",
            kind: FieldExpression,
            scope: None,
            start_line: 1,
            start_column: 33,
            end_line: 1,
            end_column: 49,
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
